name:                hake-solver
version:             0.1
synopsis:            Hake Constraint Solver
description:         The Hake Build System is a cloud enabled build system for Haskell.
license:             BSD3
license-file:        LICENSE
author:              Steve Severance, Nathan Howell
maintainer:          sseverance@alphaheavy.com, nhowell@alphaheavy.com
homepage:            https://github.com/HakeIO/hake-solver
bug-reports:         https://github.com/HakeIO/hake-solver/issues
category:            Development

build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Development.Hake.OrderedConfVar
    Development.Hake.Solver
    Development.Hake.TraversableCondition
  other-modules:
  build-depends:
    base                       >= 4.7 && < 5,
    binary,
    Cabal,
    containers,
    mtl,
    pretty,
    z3
  ghc-options:
    -Wall

test-suite solver-test
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.7 && < 5,
    bytestring,
    Cabal,
    containers,
    filepath,
    hake-solver,
    mtl,
    tar,
    text,
    transformers,
    z3,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit                      >= 1.2,
    QuickCheck                 >= 2.4

source-repository head
  type:     git
  location: https://github.com/HakeIO/hake-solver.git
