name:                hake-solver
version:             0.1
synopsis:            Hake Constraint Solver
description:         The Hake Build System is a cloud enabled build system for Haskell.
license:             BSD3
license-file:        LICENSE
author:              Steve Severance, Nathan Howell
maintainer:          sseverance@alphaheavy.com, nhowell@alphaheavy.com
homepage:            https://github.com/HakeIO/hake-solver
bug-reports:         https://github.com/HakeIO/hake-solver/issues
category:            Development

build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Development.Hake.OrderedConfVar
    Development.Hake.Solver
    Development.Hake.TraversableCondition
  other-modules:
  build-depends:
    base                       >= 4.7 && < 5,
    binary,
    Cabal,
    containers,
    mtl,
    pretty,
    z3
  ghc-options:
    -Wall

executable solver-import
  default-language:
    Haskell2010
  hs-source-dirs:
    importer
  main-is:
    Main.hs
  other-modules:
  build-depends:
    base                       >= 4.7 && < 5,
    aeson,
    binary,
    bytestring,
    Cabal,
    containers,
    filepath,
    mtl,
    process,
    resourcet,
    tar,
    text,
    transformers,
    vector
  ghc-options:
    -Wall -rtsopts -static
  extra-libraries:
    stdc++

test-suite solver-unit-tests
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    UnitTests.hs
  build-depends:
    base                       >= 4.7 && < 5,
    Cabal,
    containers,
    hake-solver,
    mtl,
    z3,
    tasty,
    tasty-hunit
  ghc-options:
    -Wall -rtsopts -static

test-suite solver-hackage-test
  buildable:
    False
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  build-depends:
    base                       >= 4.7 && < 5,
    aeson,
    bytestring,
    Cabal,
    containers,
    filepath,
    hake-solver,
    mtl,
    resourcet,
    process,
    text,
    transformers,
    z3,
    tar,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit                      >= 1.2,
    QuickCheck                 >= 2.4
  ghc-options:
    -Wall -rtsopts -static
  extra-libraries:
    stdc++

source-repository head
  type:     git
  location: https://github.com/HakeIO/hake-solver.git
